feat: Updated OpenAPI spec (#105)
